--- a/public/login.html
+++ b/public/login.html
@@ -19,7 +19,7 @@
         <h1>Login no Sistema Locadora</h1>
         <form
           method="POST"
-          action="/aluno2-ppiadsead/login.html"
+          action="/aluno2-ppiadsead/login"
           class="row g-1 needs-validation"
           novalidate
         >
